<resources>
    <string name="app_name">Womens-Security-with-Sms-alerts</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="personal_app">Personal app</string>
    <string name="proactive_safety">Proactive Safety</string>
    <string name="email">Email Address:</string>
    <string name="password">Password:</string>
    <string name="create">Create a account </string>
    <string name="re_type_password">Re-Type Password:</string>
    <string name="already_have_an_account_click_the_login_button_to_login_to_the_app">Already have an account ?</string>
    <string name="login_to_already_existing_account"> Login Now </string>
    <string name="login_button">Login</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now !</string>
    <string name="login_here">Login Here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now_loginPage">Register Now</string>
    <string name="logout">Logout</string>
    <string name="women_s_proactive_safety">Proactive Safety</string>
    <string name="enter_phone_number_for_verification">Enter Phone Number For Verification</string>
    <string name="this_number_will_be_used_for_all_app_related_communication_you_will_receive_an_sms_with_an_access_code_for_verification">This number will be used for all app related communication. You will receive an SMS with an access code for verification.</string>
    <string name="a_image_for_the_application">A image for the application</string>
    <string name="enter_your_phone_no">Enter your Phone No.</string>
    <string name="phone_number">Phone Number</string>
    <string name="generate_otp">GENERATE OTP</string>
    <string name="otp_number">OTP Number</string>
    <string name="verify_otp">Verify OTP</string>
</resources>