<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_bg"
    tools:context=".SignUpActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_now"
        android:gravity="center"
        android:textSize="45sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfEmail"
            android:layout_width="410dp"
            android:layout_height="75dp"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:hint="@string/email"
            android:textColorHighlight="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfEmailTwo"
            android:layout_width="410dp"
            android:layout_height="75dp"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfPassword"
            android:layout_width="410dp"
            android:layout_height="75dp"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bg"
        android:text="@string/create"
        android:fontFamily="sans-serif"
        android:padding="20dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/tvLoginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/already_have_an_account_click_the_login_button_to_login_to_the_app"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bg"
        android:text="@string/login_to_already_existing_account"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

</LinearLayout>