<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bg"
    tools:context=".MainActivity">

    <!-- Front page -->
    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="230dp"
        android:src="@drawable/front_page_img" />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="230dp"
        android:layout_toEndOf="@id/ivImage"
        android:background="@drawable/background_bg"
        android:text="@string/proactive_safety"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:textSize="40sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv2Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/ivImage"
        android:background="@drawable/background_bg"
        android:fontFamily="sans-serif"
        android:text="@string/personal_app"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btLetStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/let_s_start"
        android:background="@drawable/background_bg"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/ivImage"
        android:layout_marginTop="75dp"
        android:layout_marginStart="85dp"
        android:fontFamily="sans-serif"/>

</RelativeLayout>